Fragments de pedido tanto para o usuario, quanto para empresa, finalizados

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IfoodClone">
         <activity
+            android:name=".PedidoDetalheActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.usuario.UsuarioResumoPedidoActivity"
             android:exported="false" />
         <activity
